--- a/outdoorActivities/.classpath
+++ b/outdoorActivities/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/keyvan/Desktop/WebDevelopment/2nd semester/Java Programming Advanced/javax.json-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/keyvan/Desktop/WebDevelopment/2nd semester/Java Programming Advanced/ass4/javax.json-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
